--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta charset="utf-8">
-		<title>CSSSR - Vlasov Konstantin</title>
+		<title>New Project Stubl</title>
 		<link rel="stylesheet" href="css/app.min.css">
 	</head>
 	<body>
