Right to resources's path in index

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta charset="utf-8">
 		<title>New Project Stubl</title>
-		<link rel="stylesheet" href="css/app.min.css">
+		<link rel="stylesheet" href="assets/css/app.min.css">
 	</head>
 	<body>
 		<header class="pageHeader">welcome to project</header>
-		<script src="js/app.min.js"></script>
+		<script src="assets/js/libs/jquery-1.11.2.min.js"></script>
+		<script src="assets/js/app.js"></script>
 	</body>
 </html>
